prevent overflow contenteditable; add placeholder text in empty editable

--- a/src/styl/edit/index.styl
+++ b/src/styl/edit/index.styl
@@ -7,9 +7,7 @@
   box-shadow: none
   outline: 0
 
-
 [contenteditable="true"].single-line
-  white-space: nowrap
   overflow: hidden
 
 [contenteditable="true"].single-line br
@@ -18,6 +16,13 @@
 [contenteditable="true"].single-line *
   display: inline
   white-space: nowrap
+
+[editable]:empty
+  &:before
+    content: "請在此填入內容 ..."
+    display: inline
+    opacity: .5
+
 
 .folder-item [contenteditable="true"]:focus
   box-shadow: none
